testsuite/tests/parser/should_fail/T13600.stderr

T13600.hs:8:1: error:
    Did you forget to activate -XBangPatterns ? If not, add a space before the bang !
                                                                                    x
